# vuanem-caresoft-query

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  settings.py
.github/workflows/: cloud-run.yaml
app/: main.py
app/database/: base.py
app/zalo/: user_model.py  user_schema.py  user_service.py
app/zalo/models/: __init__.py  zalo_user.py
caresoft_query/: controller.py  dto.py  service.py  service_test.py
caresoft_query/templates/: get-customer-by-phone.sql.j2  get-order-by-id.sql.j2  get-orders-by-customer.sql.j2  get-orders-by-id.sql.j2  get_by_phone.sql.j2
database/: base.py
migrations/: env.py
migrations/versions/: 5edc341611f0_initial_migration.py  80b80b2a948a_initial_migration.py
netsuite/: interface.py  service.py  service_test.py
redis_module/: __init__.py
templates/: info.html
zalo/: user_model.py  user_service.py  zalo_controller.py
zalo/auth/: auth_controller.py  auth_interface.py  auth_repository.py  auth_schema.py  auth_service.py  auth_service_test.py
