[tool.poetry]
name = "vuanem-zalo-oa"
version = "0.1.0"
description = ""
authors = ["Bui Thu Ha <thuhak22ba@gmail.com>", "HM <hieumdd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
Flask = "^2.2.2"
SQLAlchemy = "^1.4.45"
flask-marshmallow = "^0.14.0"
Flask-RESTful = "^0.3.9"
flask-sqlalchemy = "^3.0.2"
Flask-Migrate = "^4.0.0"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.0"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
pydantic = "^1.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "-s --durations=0"

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
namespace_packages = true
