[tool.poetry]
name = "vuanem-caresoft-query"
version = "0.1.0"
description = ""
authors = ["Bui Thu Ha <thuhak22ba@gmail.com>", "HM <hieumdd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
python-dotenv = "^0.21.0"
fastapi = { extras = ["all"], version = "^0.88.0" }
uvicorn = { extras = ["standard"], version = "^0.20.0" }
pydantic = "^1.10.2"
Jinja2 = "^3.1.2"
redis = { extras = ["hiredis"], version = "^4.4.0" }
Authlib = "^1.2.0"
httpx = "^0.23.1"
furl = "^2.1.3"
requests-oauthlib = "^1.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
black = "^22.12.0"
types-redis = "^4.3.21.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "-s --durations=0"
python_files = "*_test.py"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
namespace_packages = true
plugins = ["pydantic.mypy"]
